bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  n match {
    case n if (111>n,n>89) => return true
    case n if (211>n,n>189) => return true
    case n => return false
  }
}